Added CSS style doc and learning more basics

--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-<center><h1>Welcome!</h1>
-<p>This website has just begun development and will be updated as work progresses. Stay tuned for more content!</p>
+<!DOCTYPE HTML><!-- HTML 5 -->
+<html>
+<head>
+<!-- Website title -->
+<title>Ready To Be A Ramey</title>
+<!-- Linking CSS style doc-->
+<link href="CSS/style.css" type="text/css" rel="stylesheet">
+</head>
 
-</center>
+<!-- Main body -->
+<div id="main">
+	<h1>Ready To Be A Ramey?</h1>
+	<h2>Sarah certainly is!</h2>
+	<hr></hr>
+		<p>This website has just begun development and will be updated as work progresses. Stay tuned for more content!</p>
+</div> <!-- End main body -->
+</html>
