Added a few pages and a navbar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 <div id="main">
 	<h1>Ready To Be A Ramey?</h1>
 	<h2>Sarah certainly is!</h2>
-	<hr></hr>
-		<p>This website has just begun development and will be updated as work progresses. Stay tuned for more content!</p>
+	<div class="navBar_Container">
+		<nav>
+			<ul>
+				<li><a href="Pages/Home.html">Home</a></li>
+				<li><a href="Pages/Info.html">Information</a></li>
+				<li><a href="Pages/RSVP.html">RSVP</a></li>
+				<li><a href="Pages/Registry.html">Registry</a></li>
+			</ul>
+		</nav>
+	</div>
+		<p>This website has just begun development and will be updated as work progresses. 
+		Stay tuned for more content!</p>
 </div> <!-- End main body -->
+
 </html>
