That timer script was not a happy one. Turning it off for now.

--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -22,7 +22,7 @@
             <p id="countDown">This is where the timer should be.</p>
 
             <script>
-                //Set the day being counted down too
+                /*//Set the day being counted down too
                 var countDownDate = new Date("Aug 17, 2019 10:00:00").getTime;
 
                 //Update countdown every 1 second
@@ -49,7 +49,7 @@
                     clearInterval(x);
                     document.getElementById("countDown").innerHTML = "It's the big day!";
                 }
-            });
+            });*/
             </script>
         </div><!--End main-->
     </body>
