--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -19,37 +19,29 @@
                     </ul>
                 </nav>
             </div><!--End navbar-->
-            <p id="countDown">This is where the timer should be.</p>
 
+            <div id="countDown">
+                <div>
+                    <span class="days"></span>
+                    <div class="smalltext">Days</div>
+                </div>
+                <div>
+                    <span class="hours"></span>
+                    <div class="smalltext">Hours</div>
+                </div>
+                <div>
+                    <span class="minutes"></span>
+                    <div class="smalltext">Minutes</div>
+                </div>
+                <div>
+                    <span class="seconds"></span>
+                    <div class="smalltext">Seconds</div>
+                </div>
+            </div><!--End CountDown-->
+
+            <script src="../Scripts/CountDownTimer.js" type="text/javascript"></script>
             <script>
-                /*//Set the day being counted down too
-                var countDownDate = new Date("Aug 17, 2019 10:00:00").getTime;
-
-                //Update countdown every 1 second
-                var x = setInterval(function(){
-
-                //Get todays date and time
-                var now = new Date.getTime();
-
-                //Find distance between now and countdown date.
-                var distance = countDownDate - now;
-
-                //Time calculations for days, hours, minutes, and seconds.
-                var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 *60));
-                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-                //Display the result in the element with the id="countDown"
-                document.getElementById("countDown").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
-
-                //If the count down is finished, write a message
-                if(distance < 0)
-                {
-                    clearInterval(x);
-                    document.getElementById("countDown").innerHTML = "It's the big day!";
-                }
-            });*/
+                initializeClock('countDown', deadLine);
             </script>
         </div><!--End main-->
     </body>
