Added a redirect from index to home

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <title>Ready To Be A Ramey</title>
 <!-- Linking CSS style doc-->
 <link href="CSS/style.css" type="text/css" rel="stylesheet">
+<!--Reditrect to /home-->
+<meta http-equiv="refresh" content="0; URL='https://jaredramey.github.io/Pages/Home.html'">
 </head>
 
 <!-- Main body -->
