Added areas for where text/ objects will be added

--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -43,6 +43,12 @@
             <script>
                 initializeClock('countDown', deadLine);
             </script>
+
+            <div id="TheStory">
+                <p>
+                    Insert "our story" when sarah is done writing it.
+                </p>
+            </div>
         </div><!--End main-->
     </body>
 
