--- a/Pages/Info.html
+++ b/Pages/Info.html
@@ -19,6 +19,24 @@
                     </ul>
                 </nav>
             </div>
+
+            <div id="Wedding_Info">
+                <div id="Venue_Location">
+                    <p>
+                        Insert Venue information when that's figured out.
+                    </p>
+                </div>
+                <div id="Date_time">
+                    <p>
+                        Insert date and time when that's figured out.
+                    </p>
+                </div>
+                <div id="Ect info">
+                    <p>
+                        Insert any other information here if needed.
+                    </p>
+                </div>
+            </div>
         </div>
     </body>
 
