--- a/Pages/RSVP.html
+++ b/Pages/RSVP.html
@@ -21,9 +21,14 @@
                     </ul>
                 </nav>
             </div>
-            <div id="testing"></div>
+            <!--<div id="testing"></div>
             <script src="../Scripts/jquery-3.3.1.min.js"></script>
             <script>$("#testing").html('<object data="http://jaredscode.me/test/"/>');</script>
             <!--<iframe id="RSVP_Database" src="http://jaredscode.me/test/"></iframe>-->
+            <div id="RSVP_List">
+                <p>
+                    Insert RSVP list when that is figured out.
+                </p>
+            </div>
         </div> <!-- End main body --> 
 </html>
