--- a/Pages/Registry.html
+++ b/Pages/Registry.html
@@ -21,5 +21,10 @@
                     </ul>
                 </nav>
             </div>
+            <div id="Registry">
+                <p>
+                    Insert registry when I can get that working properly.
+                </p>
+            </div>
         </div> <!-- End main body -->
 </html>
